# calmuxd

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.json  flake.nix  module.nix
src/: config.rs  main.rs  muxer.rs
